@@ -4,6 +4,10 @@
 
 * Add optional progress bars to muninn-update (requires 'tqdm' package).
 
+* export() now returns the list of paths of the exported products. The 
+  `export_` functions in the product type plugins must return the path of the
+  exported product.
+
 4.1 2017-11-16
 ~~~~~~~~~~~~~~
 
